# poker-2

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
docs/: cadrage-projet.md  workflow-git.md
scripts/: annotate_session_with_openai.py  evaluate_local_against_history.py  evaluate_local_against_openai.py  evaluate_pure_live_against_history.py  match_session_to_history.py  poker_table_ocr.py
src/poker_tracker/: __init__.py  app.py  config.py  detection.py  history.py  history_matcher.py  history_truth.py  live_state.py  local_snapshot_analysis.py  ocr.py  openai_annotator.py  parser.py  pure_live_detector.py  session_recorder.py  visual.py
